infra/k8s/comments-depl.yaml
# Create a deployent (which contains a pod)-
# kubectl apply -f comments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: docker.io/soumy9/comments:latest
# to seperate 2 configs in same file, they are seperated by ---
---
apiVersion: v1
kind: Service
metadata:
  name: comments-srv
spec:
  selector:
    #to tell the service what pods it is going to allow access to.
    app: comments
    # i.e. allow access to any request with an app: even-bus
  type: ClusterIP
  # by default type is ClusterIP only
  ports:
    - name: comments
      protocol: TCP
      port: 4001
      targetPort: 4001
