infra/k8s/moderation-depl.yaml
# Create a deployent (which contains a pod)-
# kubectl apply -f moderation-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
        - name: moderation
          image: docker.io/soumy9/moderation:latest
# to seperate 2 configs in same file, they are seperated by ---
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-srv
spec:
  selector:
    #to tell the service what pods it is going to allow access to.
    app: moderation
    # i.e. allow access to any request with an app: even-bus
  type: ClusterIP
  # by default type is ClusterIP only
  ports:
    - name: moderation
      protocol: TCP
      port: 4003
      targetPort: 4003
